--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,7 @@ NODE_ENV=development
 PORT=5000
 
 # Database Configuration
-MONGODB_URI=mongodb://localhost:27017/bugtracker
+MONGODB_URI=mongodb://127.0.0.1:27017/bugtracker
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
