--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,11 +2,14 @@
 NODE_ENV=development
 PORT=5000
 
-# Database Configuration
+# Database Configuration (Local Development)
 MONGODB_URI=mongodb://127.0.0.1:27017/bugtracker
 
+# Database Configuration (Production - MongoDB Atlas)
+# MONGODB_URI=mongodb+srv://Avishi:Avishi%40123@avishicluster.pxu9tca.mongodb.net/bugtracker?retryWrites=true&w=majority&appName=AvishiCluster
+
 # JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-use-crypto-random-string
 JWT_EXPIRES_IN=24h
 
 # Frontend Configuration
