--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -5,5 +5,11 @@
   "installCommand": "npm install",
   "env": {
     "VITE_API_URL": "https://bug-tracker-3dlf.onrender.com/api"
-  }
+  },
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
